# conciergeAI

./: .gitignore  Dockerfile  Dockerfile.conda  README.md  UV_COMMANDS.md  concierge.yaml  docker-compose.yml  migrate_to_uv.sh  pyproject.toml  python_delete_resources.py  python_deploy_bicep.py  python_scale_down_agents.py  python_structure.py  requirements.txt  requirements.yaml  st-foundry-exportedtemplate.json
.github/workflows/: ci.yml
agents/: knowledge_agent.py  langchain_orchestrator_multi.py  orchestrator.py
api/: main.py
api/endpoints/: knowledge.py  nutrition.py  planning.py  wellbeing.py
api/models/: query.py  user.py
config/: llm_config.json
data/planning/: high-view.drawio
databases/: postgres.py
infra/: dev.parameters.json  main.bicep  main.json
infra/modules/: containerApp.bicep
services/: knowledge_service.py  langchain_knowledge_service.py  langchain_wellbeing_service.py  llm_orchestrator.py
