[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-concierge"
version = "0.1.0"
description = "AI Concierge Assistant with multi-agent capabilities"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "AI Concierge Team" }
]
keywords = ["ai", "assistant", "concierge", "agents", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi==0.85.1",
    "celery==5.2.3",
    "langchain==0.0.126",
    "pydantic==1.10.5",
    "uvicorn==0.19.0",
    "psycopg2==2.9.3",
    "pika==1.2.0",
    "pinecone-client==2.0.1",
    "python-dotenv==1.0.0",
    "azure-identity==1.15.0",
    "azure-mgmt-resource==23.0.1",
    "azure-mgmt-web==7.2.0",
    "azure-mgmt-appcontainers==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-concierge"
Repository = "https://github.com/your-org/ai-concierge.git"
Issues = "https://github.com/your-org/ai-concierge/issues"

[project.scripts]
concierge = "api.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
